2011-03-13 Stefan Bidigaray <stefanbidi@gmail.com>

	* GNUmakefile:
	* Headers/CoreFoundation/CFLocale.h:
	* Source/CFLocale.c: New, mostly unimplemented CFLocale type.
	* Source/CFRuntime.m: Fixed a problem in CFCopyDescription where it
	tried to look up a typeID > __CFRuntimeClassTableSize.
	* Source/CFBase.m: Define kCFAllocatorSystemDefault = kCFAllocatorDefault.
	* Source/CFString.h:
	* Source/CFBase.h: Changes due to introduction of CFLocale.h.  Also
	fixed wrong definition of CF_EXTERN_C_{BEGIN,END}.

2010-09-18 Fred Kiefer <fredkiefer@gmx.de>

	* Source/CFPropertyList.m (CFPropertyListCreateDeepCopy):
	Implement deep copy.

2010-06-22 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.m: Use NSAllocateObject() instead of 
	  duplicating code in this function.

2010-03-23 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.m: Fixed typo in CFShowStr() and return for 
	CFStringGet*Ptr().

2010-03-23 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFBase.h:
	* Source/CFString.m: Fixed a few bugs and implemented CFShowStr().

2010-03-23 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFStream.m:
	* Source/CFArray.m:
	* Source/CFURL.m:
	* Source/CFDictionary.m:
	* Source/CFString.m:
	* Source/CFNumber.m:
	* Source/CFData.m:
	* Source/CFError.m: Added -_cfTypeID to bridged ObjC classes.

2010-03-23 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.m: Correct output of CFCopyDescription(), 
	fixed CFCopyTypeIDDescription() and added copyright notice.
	* Headers/CoreFoundation/CFRuntime.h: Added copyright notice.
	* Source/CFString.m: Fixed typo.

2010-03-22 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.m: Fixed output of -description.
	* Source/CFString.m:
	* Headers/CoreFoundation/CFString.h: Added CFShow().

2010-03-21 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GNUmakefile:
	* Source/CFRuntime:
	* Headers/CoreFoundation/CFRuntime.h: Added CFRuntime implementation.
	* Source/CFBase.m: